--- a/Introducao-Angular/1/Aula1/angular.json
+++ b/Introducao-Angular/1/Aula1/angular.json
@@ -25,11 +25,14 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/styles.css",
-              "src/assets/css/dashboard.css"
+              "src/assets/css/dashboard.css",
+              "node_modules/datatables.net-bs/css/dataTables.bootstrap.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.min.js",
+              "node_modules/datatables.net-bs/js/dataTables.bootstrap.min.js"
             ]
           },
           "configurations": {
