--- a/Introducao-Angular/1/Aula1/package.json
+++ b/Introducao-Angular/1/Aula1/package.json
@@ -23,6 +23,7 @@
     "angular-route": "^1.7.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "datatables.net-bs": "^1.10.19",
     "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
